# iPIC3DxPEACE

./: CMakeLists.txt  CMakeLists.txt_original  Doxyfile  Makefile.bigmac  README.md  code_test_oca.inp  compile.sh  generate_doc.sh  iPIC3D.cpp
ConfigFile/: ConfigFile.cpp
PSKOutput3D/: PSKhdf5adaptor.cpp
bc/: BcFields3D.cpp
catalyst_legacy/: Adaptor_legacy.cpp  Adaptor_legacy.h
catalyst_legacy/scripts/: B.py  Tcart_e0.py  Tcart_e0_YY.py  Tperpar_e0.py  Tperpar_e0_YY.py  Ve0.py  no_data.py  no_render.py  rhoe0.py  rhoi1.py  script.py
communication/: Com3DNonblk.cpp
documentation/: .readme2.txt.swp  readme4_changes.txt
doxygen_docs/: Doxyfile
doxygen_docs/html/: BcFields3D_8h.html  BcFields3D_8h_source.html  Com3DNonblk_8h.html  Com3DNonblk_8h_source.html  ConfigFile_8h_source.html  Info.plist  Nodes.xml  Tokens.xml  VCtopology3D_8h.html  VCtopology3D_8h_source.html  annotated.html  annotated_dup.js  classCollective.html  classConfigFile-members.html  classConfigFile.html  classVCtopolgy3D.html  classVCtopology3D-members.html  classVCtopology3D.html  classes.html  dir_002ff0e00fc8efbace9615f00574ac55.html  dir_002ff0e00fc8efbace9615f00574ac55.js  dir_019f5cc08b1f2a63a317e3b091d99d68.html  dir_019f5cc08b1f2a63a317e3b091d99d68.js  dir_0b20a34188d44119719093de382677cd.html  dir_0b20a34188d44119719093de382677cd.js  dir_0cd884886e0f1997cd75ac30afa71ffd.html  dir_0cd884886e0f1997cd75ac30afa71ffd.js  dir_0e7cfe4b933bf2b21a72021cd64ac997.html  dir_0e7cfe4b933bf2b21a72021cd64ac997.js  dir_0fce3bb71f682baa9ce105f2e17e6ee3.html  dir_0fce3bb71f682baa9ce105f2e17e6ee3.js  dir_150425620ffbf58c287b1ae8150784e0.html  dir_150425620ffbf58c287b1ae8150784e0.js  dir_15107c8e7a0cc6e02ee0f5189f1c1343.html  dir_15107c8e7a0cc6e02ee0f5189f1c1343.js  dir_1755e95f6dc04bd4d0d814155a49fbd5.html  dir_1755e95f6dc04bd4d0d814155a49fbd5.js  dir_177a4997f54dcb6aa1fe4e3162845e02.html  dir_177a4997f54dcb6aa1fe4e3162845e02.js  dir_17e126628f3523d5835ea743e2e9cf3a.html  (+427 more)
doxygen_docs/html/search/: all_0.js  all_1.js  all_3.js  all_8.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  files_0.js  files_1.js  files_2.js  functions_0.js  functions_1.js  functions_3.js  functions_5.js  functions_6.js  pages_1.js  search.idx  searchdata.js  typedefs_0.js
fields/: EMfields3D.cpp  EMfields3D.cpp_original
include/: Alloc.h  Basic.h  BcFields3D.h  BlockCommunicator.h  Collective.h  Collisions.h  Com3DNonblk.h  ConfigFile.h  EMfields3D.h  Moments.h  OutputWrapperFPP.h  PSKOutput.h  ParallelIO.h  Particles3D.h  Particles3Dcomm.h  VCtopology3D.h  errors.h  iPic3D.h  ipicfwd.h  mic_particles.h  phdf5.h
inputfiles/: inputfile_all_inputs.inp  testEmptyBox3D_noColl_small.inp  testEmptyBox3D_small.inp  testEmptyBox3D_small_Pete.inp  testEmptyBox3D_yesColl_small.inp  testExosphere3D_yesAll_small.inp  testExosphere3D_yesColl_small.inp  testExosphere3D_yesIoniz_small.inp  testGEM2Dsmall.inp  testGEM3Dsmall.inp  testMagnetosphere2DLavorenti.inp  testMagnetosphere2D_small.inp  testMagnetosphere2Dsmall.inp  testMagnetosphere3DLavorenti.inp  testMagnetosphere3D_medium.inp  testMagnetosphere3D_small.inp  testMagnetosphere3D_small_Julen.inp  testMagnetosphere3D_testPcls.inp  testMagnetosphere3D_yesAll_medium.inp  testMagnetosphere3D_yesAll_small.inp  testMagnetosphere3Dsmall.inp
inputoutput/: OutputWrapperFPP.cpp  ParallelIO.cpp  WriteOutputParallel.cpp  phdf5.cpp
main/: Collective.cpp  iPIC3Dlib.cpp
particles/: Collisions.cpp  Particles3D.cpp  Particles3Dcomm.cpp
post-process/: .plot2_paper_mu.py.swp  Dipole3D_TXXe0_0.vtk  download_procs_irene.sh  job_print_planet.irene  output_dataP.txt  plot1_paper_nBJ.py  plot2_paper_nBJ.py  plot3_paper_MagRec.py  plot_Jpar-planet.py  plot_iPIC3D_energy.py  print_dataP_list.py  print_planet_ipic.py  print_planet_main.py  print_planet_routines.py  print_planet_trajectory.py
post-process/fibo/: __init__.py  iPIC_loader.py  mod_axis.py  mod_calc.py  mod_comp.py  mod_draw.py  mod_extra.py  mod_extract.py  mod_find.py  mod_from.py  mod_get.py  mod_phybo.py  mod_print.py
post-process/fibo/script/: plot_tests-new-features.py
post-process/fibo/tests/: test_00.py  test_01.py  test_02.py  test_03.py  test_all.py  test_from_HVM.py  test_from_MFL.py  test_from_VTK.py  test_new-features.py  test_to2D.py
post-process/hdf2vtk_v22mar2016/hdf2vtk_v22mar2016/: hdf2vtk  hdf2vtk_iPic3D_v22mar2016.cpp  makefile
post-process/miscellanous/: job_print_planet.rome  output_plot_Jpar.txt  output_plot_Jpargf3.txt  print_global_ipic.py  print_planet_main.py  submit_print_planet_main.sh  vectorfield.py  vtk_routines.py
post-process/plot_1st-paper/: plot1_paper_nBJ.py  plot2_paper_mu.py  plot2_paper_nBJ.py  plot3_paper_MagRec.py  plot4_Blines.py  plot5_paper_in-situ-data.py  plot5_paper_in-situ-data1.py
post-process/plot_2nd-paper/: Rates_EII.txt  Rates_EII_total.txt  Rates_EII_total_10.txt  Rates_EII_total_20.txt  Sigma_EII-O.txt  output_cusps_PR0-plusBz_5800.txt  output_cusps_PR1-minusBz_6500.txt  plot1_paper-2_cusps.py  plot1_paper-2_image.py  plot1_paper-2_precipitation.py  plot1_paper-2_selector.py  plot2_paper_df.py  plot3_paper-2_cross-sec.py  plot_boxplot.py
post-process/plot_2nd-paper/drive-download-20220622T093236Z-001/: energy-hundreds-thousands-e-negz.csv  energy-hundreds-thousands-e-posz.csv  energy-hundreds-thousands-i-negz.csv  (+30 more)
post-process/post-process/: clean.sh  plot_2Dcuts_Pij.py  plot_2Dcuts_TnV.py  plot_2Dcuts_nBJ.py  plot_comp-time_iPIC3D.py  plot_iPIC3D_energy.py  print_dataP_list.py  print_iPIC3D_comp-time.py  start.sh  test_TnV.py  test_to2D.py
post-process/pp-level-1/: job_start.irene  plot_2Dcuts_Pij.py  plot_2Dcuts_nBJ.py  plot_iPIC3D_energy.py  print_dataP_list.py  print_iPIC3D_comp-time.py  start.sh
post-process/pp-level-2/: job_TperparE.slurm  test_TperparE.py
post-process/trajectory_files/: Bepi-flyby-1st_MSO-trajectory1.txt  Bepi_box-coord_PR1-newbox.txt  Mariner-flyby-1st_MSO-trajectory1.txt  Mariner-flyby-1st_full-dataset.txt  Mariner10_box-coord_PR1-newbox.txt  noseMP_trajectory1.txt  tailXline_trajectory1.txt
utility/: Basic.cpp  TimeTasks.cpp
(+1989 files in other folders)
